--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ chrono = { version = "0.4", features = ["serde"] }
 anyhow = "1.0"
 thiserror = "1.0"
 tempfile = "3.16"
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
+zip = "2.2"
 
 # Logging
 tracing = "0.1"
