--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "atom_node"
+name = "anthill"
 version = "0.1.3"
 edition = "2024"
 
 [[bin]]
-name = "atom_node"
+name = "anthill"
 path = "src/main.rs"
 windows_subsystem = "windows"
 
